--- a/views/set/header.ejs
+++ b/views/set/header.ejs
@@ -6,6 +6,6 @@
   <div class="header-contents">
     <a href="/" class="header-logo-top">Revima</a> 
     <a href="/login" class="header-btn-login">ログイン</a>
-    <p class="header-btn-vote">投票する</p>
+    <a href="/regist"><p class="header-btn-vote">投票する</p></a>
   </div>
 </header>
