--- a/views/top.ejs
+++ b/views/top.ejs
@@ -23,7 +23,7 @@
         Revimaでは、ユーザー投票によって選ばれた作品が映画館のスクリーンに蘇ります。<br/>
         あなたのお気に入りの作品を教えてください。
       </p>
-      <button class="home-vote-eiga">見たい映画に投票する</button>
+      <a href="/regist"><button class="home-vote-eiga">見たい映画に投票する</button></a>
       <div class="home-demo-box-container">
         <div class="home-demo-box"></div>
         <div class="home-demo-box"></div>
