--- a/public/css/regist.css
+++ b/public/css/regist.css
@@ -30,7 +30,8 @@
   border: 1px solid var(--base-white);
   border-radius: 5px;
   height: 40px;
-  margin-top: 10px;
+  margin-top: 35px;
+  /* 10px */
   padding-left: 14px;
   width: 100%;
 }
@@ -64,4 +65,9 @@
 }
 .regist-txt-login {
   color:#669B9E;
+}
+
+/* エラー時css */
+.regist-errors-wrapper {
+  
 }
