--- a/views/regist_done.ejs
+++ b/views/regist_done.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
   <main class="regist-done-wrapper">
-    <h1 class="regist-done-title">Revima</h1>
+    <a href="/"><h1 class="regist-done-title">Revima</h1></a>
     <p class="regist-done-message">登録は完了です！<br>さっそくもう一度見たい映画に投票しましょう！</p>
     <img src="/images/monster_hand.png" class="regist-done-monster-hand" alt="手" width="480px">
     <div class="regist-done-btn-to-top-wrapper">
