Fix:introduce_movieの修正

--- a/views/introduce_movie.ejs
+++ b/views/introduce_movie.ejs
@@ -12,7 +12,7 @@
   <%- include("./set/header"); %>
   <div class="introduce_movie-contents">
     <h1 class="introduce_movie-title">バックトゥザフューチャー</h1>
-    <div class="introduce_movie-movie-img"></div>
+    <div class="introduce_movie-movie-img"><img src="/images/btf.png" alt="バックトゥザフューチャー" width="103%"></div>
     <div class="introduce_movie-story">
       <p class="introduce_movie-story-text">
         1985年のアメリカ映画。SF映画。略して『BTTF』『BTF』とも呼ばれる。『バック・トゥ・ザ・フューチャーシリーズ』の1作目。公開当時全米で『フューチャー現象』と呼ばれるブームが生まれるほど大ヒットした。
