--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,8 +17,8 @@
       <% }); %>
     <% } %>
     <form action="" method="post">
-      <input type="text" name="login-name"placeholder="メールアドレス、ユーザーネーム" class="login-input-userinfo"></input>
-      <input type="password" name="login-password" placeholder="パスワード" class="login-input-password"></input>
+      <input type="text" name="login_username" placeholder="メールアドレス、ユーザーネーム" class="login-input-userinfo"></input>
+      <input type="password" name="login_password" placeholder="パスワード" class="login-input-password"></input>
       <button type="submit" class="login-btn-login">ログイン</button>
     </form>
     <p class="login-create-account">アカウントを持っていない場合 <a href="/regist" class="login-txt-regist">登録はこちらから</a></p>
