--- a/views/introduce_movie.ejs
+++ b/views/introduce_movie.ejs
@@ -10,15 +10,15 @@
 </head>
 <body>
   <%- include("./set/header"); %>
-  <div class="introduce_movie-contents">
-    <h1 class="introduce_movie-title">バックトゥザフューチャー</h1>
-    <div class="introduce_movie-movie-img"><img src="/images/btf.png" alt="バックトゥザフューチャー" width="103%"></div>
-    <div class="introduce_movie-story">
-      <p class="introduce_movie-story-text">
+  <div class="introduce-movie-whole-wrapper">
+    <h1 class="introduce-movie-title">バックトゥザフューチャー</h1>
+    <div class="introduce-movie-movie-img"><img src="/images/btf.png" alt="バックトゥザフューチャー"></div>
+    <div class="introduce-movie-story">
+      <p class="introduce-movie-story-text">
         1985年のアメリカ映画。SF映画。略して『BTTF』『BTF』とも呼ばれる。『バック・トゥ・ザ・フューチャーシリーズ』の1作目。公開当時全米で『フューチャー現象』と呼ばれるブームが生まれるほど大ヒットした。
-同年のアカデミー賞では音響効果賞を受賞。続編に『バック・トゥ・ザ・フューチャー PART2』（1989年）、『バック・トゥ・ザ・フューチャー PART3』（1990年）がある。
+        同年のアカデミー賞では音響効果賞を受賞。続編に『バック・トゥ・ザ・フューチャー PART2』（1989年）、『バック・トゥ・ザ・フューチャー PART3』（1990年）がある。
       </p>
-      <a href="#"><button class="introduce_movie-vote">投票する</button></a>
+      <a href="#"><button class="introduce-movie-vote">投票する</button></a>
     </div>
   </div>
 </body>
