--- a/public/css/set/var.css
+++ b/public/css/set/var.css
@@ -2,6 +2,8 @@
   --base-black: #373737;
   --base-white: #EFEFEF;
   --base-yellow: #FFDE15;
+  --base-red: #D45555;
+  --base-blue: #669B9E;
 }
 
 @font-face {
