--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -11,7 +11,7 @@
   height: 200px;
   justify-content: space-evenly;
   margin: 36px auto 0;
-  width: 325px;
+  width: 80%;
 } 
 .mypage-first-container {
   text-align: center;
@@ -53,7 +53,7 @@
   margin: 0 auto;
   padding: 50px 10px 10px;
   text-align: center;
-  width: 372px;
+  width: 80%;
 }
 .mypage-logout-title {
   color: var(--base-black);
