--- a/public/css/payment_info.css
+++ b/public/css/payment_info.css
@@ -1,6 +1,5 @@
 @import url("/css/set/var.css");
 
-
 .payment-info-whole-wrapper {
   padding: 35px 20px 55px;
 }
@@ -31,6 +30,7 @@
 .payment-info-delete {
   color: var(--base-red);
   margin-left: 10px;
+  margin-right: 5px;
   white-space: nowrap;
 }
 .payment-info-add-creditcard {
@@ -40,7 +40,20 @@
   display: flex;
   height: 40px;
   justify-content: center;
+  line-height: 24px;
   margin-top: 20px;
-  padding: 0 10px;
-  width: 80%;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
+}
+.payment-info-goto-mypage {
+  align-items: center;
+  background-color: var(--base-yellow);
+  border-radius: 5px;
+  color: var(--base-black);
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  margin-top: 495px;
+  width: 100%;
 }
