--- a/public/css/set/var.css
+++ b/public/css/set/var.css
@@ -1,6 +1,7 @@
 :root {
   --base-black: #373737;
   --base-white: #EFEFEF;
+  --base-gray: #c4c4c4;
   --base-yellow: #FFDE15;
   --base-red: #D45555;
   --base-blue: #669B9E;
