--- a/views/payment_info.ejs
+++ b/views/payment_info.ejs
@@ -14,10 +14,11 @@
   <main class="payment-info-whole-wrapper">
     <p class="payment-info-title">クレジットカード</p>
     <div class="payment-info-creditcard-wrapper">
-      <p class="payment-info-creditcard-number">0000-0000-0000</p>
+      <p class="payment-info-creditcard-number">0000 - 0000 - 0000</p>
       <p class="payment-info-edit">編集</p>
       <p class="payment-info-delete">削除</p>
     </div>
-    <p class="payment-info-add-creditcard">+ 新しくクレジットカードを追加する</p>
+    <p class="payment-info-add-creditcard">+ クレジットカードを追加する</p>
+    <p class="payment-info-goto-mypage">マイページに戻る</p>
   </main>
 </body>
