--- a/public/css/top-login.css
+++ b/public/css/top-login.css
@@ -1,21 +1,16 @@
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/Lato-Regular.ttf") format("truetype");
-  font-weight: normal; 
-}
-
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/Lato-bold.ttf") format("truetype");
-  font-weight: bold; 
-}
 
 .top-login p,.top-login a, .top-login h1, .top-login li{
   font-family: 'Lato','Roboto',sans-serif;
 }
 .top-login{
   background-color: #222;
+  
 }
+.top-login-wrapper{
+  margin: 0 auto;
+  max-width: 560px;
+}
+
 .top-login h1{
   color: #EEE;
 }
@@ -43,7 +38,7 @@
   transition: all 0.3s;
 }
 .top-login button:hover, .top-login button:active{
-  background-color: rgb(255, 238, 143);
+  background-color: var(--base-yellow);
   transition: all 0.3s;
 }
 .top-login li{
@@ -54,51 +49,10 @@
   margin: 0 0 80px;
 }
 
-.top-login-header {
-
-  font-size: 24px;
-  font-family: 'Roboto-Medium';
-  max-width: 560px;
-  min-width: 320px;
-
-}
-.top-login-header-nav {
-  display: flex;
-  height: 80px;
-  justify-content: space-between;
-  padding: 0 20px;
-}
-.top-login-header-nav h1{
-  display: flex;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-.top-login-header-nav h1 a{
-  height: 100%;
-  line-height: 80px;
-  width: 100%;
-}
-.top-login-header-profile {
-  height: 40px;
-  margin-top: 20px;
-  overflow: hidden;
-  width: 40px;
-  
-}
-.top-login-header-profile a {
-  height: 40px;
-  width: 40px;
-}
-.top-login-header-profile a img {
-  height: 40px;
-  width: 40px;
-}
-.top-login-header-hr{
-  width: 100%;
-}
 .top-login-greet {
-  margin-left: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 60px 20px 0px !important;
   max-width: 560px;
   min-width: 320px;
 }
@@ -110,7 +64,7 @@
 .top-login-reserve-list {
   display: flex;
   justify-content: space-around;
-  margin: 20px 0;
+  margin: 40px 0 30px;
   padding: 0;
 }
 
@@ -125,7 +79,7 @@
   width: 100%;
 }
 .top-login-reserve button{
-  background-color: rgb(255, 217, 0);
+  background-color:  var(--base-yellow);
   border-radius: 7px;
   height: 40px;
   margin: 0 10%;
@@ -134,9 +88,10 @@
 }
 .top-login-reserve button a{
   border-radius: 7px;
-  color: #333;
+  color:  var(--base-black);
   line-height: 40px;
   padding: 0;
+  text-align: center;
   width: 100%;
 }
 
@@ -155,7 +110,8 @@
 }
 
 .top-login-vote-list li{
-  width: 15%;
+  width: 12%;
+  margin: 10px;
 }
 .top-login-vote-list li a{
   width: 100%;
@@ -164,7 +120,7 @@
   width: 100%;
 }
 .top-login-vote button{
-  background-color: rgb(255, 217, 0);
+  background-color: var(--base-yellow);
   border-radius: 7px;
   height: 40px;
   margin: 0 10%;
@@ -173,14 +129,15 @@
 }
 .top-login-vote button a{
   border-radius: 7px;
-  color: #333;
+  color: var(--base-black);
   line-height: 40px;
   padding: 0;
+  text-align: center;
   width: 100%;
 }
 
 .top-login-copyright {
-  color: #EEE;
+  color: var(--base-white);
   display: inline-block;
   text-align: center;
   width: 100%;
