--- a/views/regist.ejs
+++ b/views/regist.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Regist</title>
+  <title>登録</title>
   <link rel="stylesheet" type="text/css" href="/css/set/destyle.css" />
   <link rel="stylesheet" type="text/css" href="/css/set/default.css" />
   <link rel="stylesheet" type="text/css" href="/css/regist.css" />
@@ -12,7 +12,6 @@
   <main class="regist-container">
     <h1 class="regist-logo-top"><a href="/">Revima</a></h1>
     <p class="regist-nowstep1">1/2</p>
-    <!-- <input type="text" placeholder="メールアドレス" class="regist-input-mailaddress"></input> -->
     <% if(errors.length > 0) { %>
       <% errors.forEach((error) => { %>
         <p class="subscribe-error"><%= error %></p><br>
