--- a/views/reserve_two.ejs
+++ b/views/reserve_two.ejs
@@ -44,6 +44,58 @@
       <div class="reserve-two-screenline">
         <img src="/images/screen_line.png">
       </div>
+
+      <div class="reserve-two-seatnum-wrapper">
+        <p>1</p>
+        <p>8</p>
+      </div>
+
+      <div class="reserve-two-seats-wrapper">
+        <p style="position: abosolute;">A</p>
+        <div class="reserve-two-line1-wrapper">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+        <div class="reserve-two-line1-wrapper">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+        <div class="reserve-two-line1-wrapper">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+        <div class="reserve-two-line1-wrapper">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
     </div>
 
     <p class="reserve-two-selectseat-wrapper">支払いに進む</p>
