--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,38 +17,41 @@
 		<section class="home-reserve">
 			<ul class="home-reserve-list">
 				<li>
-					<a href="#"><img src="images/movie1.png" alt="" /></a>
+					<img src="images/movie1.png" alt="" />
 				</li>
 				<li>
-					<a href="#"><img src="images/movie2.png" alt="" /></a>
+					<img src="images/movie2.png" alt="" />
 				</li>
 				<li>
-					<a href="#"><img src="images/movie3.png" alt="" /></a>
+					<img src="images/movie3.png" alt="" />
 				</li>
 			</ul>
-			<button><a href="#">予約する</a></button>
+			<a href="/reserve_one"><button>予約する</button></a>
 		</section>
 		<section class="home-vote">
 			<ul class="home-vote-list">
 				<li>
-					<a href="#"><img src="images/movie1.png" alt="" /></a>
+					<img src="images/movie1.png" alt="" />
 				</li>
 				<li>
-					<a href="#"><img src="images/movie2.png" alt="" /></a>
+					<img src="images/movie2.png" alt="" />
 				</li>
 				<li>
-					<a href="#"><img src="images/movie3.png" alt="" /></a>
+					<img src="images/movie3.png" alt="" />
 				</li>
 				<li>
-					<a href="#"><img src="images/movie4.png" alt="" /></a>
+					<img src="images/movie4.png" alt="" />
 				</li>
 				<li>
-					<a href="#"><img src="images/movie5.png" alt="" /></a>
+					<img src="images/movie5.png" alt="" />
+				</li>
+				<li>
+					<img src="images/movie6.png" alt="" />
 				</li>
 				
 			</ul>
 			<div class="home-vote-btn-wrapper">
-				<button><a href="#">投票する</a></button>
+				<a href="/vote"><button>投票する</button></a>
 			</div>
 		</section>
 	</main>
