--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -27,15 +27,31 @@
     </div>
     <div class="mypage-list-wrapper">
       <p>ユーザー情報変更</p>
-      <p>支払い情報</p>
-      <p>ログアウト</p>
+      <p><a href="/payment_info">支払い情報</a></p>
+      <p id="list_logout">ログアウト</p>
       <p>退会</p>
     </div>
     
-    <div class="mypage-logout-wrapper">
+    <div class="mypage-logout-wrapper" id="popup_logout">
       <h1 class="mypage-logout-title">ログアウトしますか?</h1>
-      <p class="mypage-logout-btn">ログアウト</p>
+      <a href="/logout"><p class="mypage-logout-btn">ログアウト</p></a>
     </div>
   </div>
+<script>
+  let list_logout = document.getElementById("list_logout");
+  let popup_logout = document.getElementById("popup_logout");
+
+  // ログアウトポップアップ表示イベント
+  list_logout.addEventListener("click", ()=> {
+    popup_logout.style.visibility = "visible";
+  })
+
+  document.addEventListener("click", (e)=> {
+    if(!e.target.closest('#popup_logout') && !e.target.closest('#list_logout')) {
+      console.log('a');
+      popup_logout.style.visibility = "hidden";
+    }
+  })
+</script>
 </body>
 </html>
