--- a/views/top.ejs
+++ b/views/top.ejs
@@ -24,11 +24,13 @@
         あなたのお気に入りの作品を教えてください。
       </p>
       <a href="/regist"><button class="top-vote-eiga">見たい映画に投票する</button></a>
-      <div class="top-demo-box-container">
-        <div class="top-demo-box"></div>
-        <div class="top-demo-box"></div>
-        <div class="top-demo-box"></div>
-        <div class="top-demo-box"></div>
+      <div class="top-moviepic-container">
+        <img src="/images/movie1.png">
+        <img src="/images/movie2.png">
+        <img src="/images/movie3.png">
+        <img src="/images/movie4.png">
+        <img src="/images/movie5.png">
+        <img src="/images/movie6.png">
       </div>
     </main>
     <footer class="top-footer">
