--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,19 +9,24 @@
   <link rel="stylesheet" type="text/css" href="/css/login.css" />
 </head>
 <body>
-  <main class="login-container">
-    <h1 class="login-logo-top"><a href="/">Revima</a></h1>
-    <% if(errors.length > 0) { %>
-      <% errors.forEach((error) => { %>
-        <p class="subscribe-error"><%= error %></p><br>
-      <% }); %>
-    <% } %>
-    <form action="" method="post">
-      <input type="text" name="login_username" placeholder="メールアドレス、ユーザーネーム" class="login-input-userinfo"></input>
-      <input type="password" name="login_password" placeholder="パスワード" class="login-input-password"></input>
-      <button type="submit" class="login-btn-login">ログイン</button>
-    </form>
-    <p class="login-create-account">アカウントを持っていない場合 <a href="/regist" class="login-txt-regist">登録はこちらから</a></p>
+  <main>
+    <div class="login-errors-wrapper">
+      <% if(errors.length > 0) { %>
+        <% errors.forEach((error) => { %>
+          <p class="login-error"><%= error %></p>
+        <% }); %>
+      <% } %>
+    </div>
+
+    <div class="login-container">
+      <h1 class="login-logo-top"><a href="/">Revima</a></h1>
+      <form action="" method="post">
+        <input type="text" name="login_username" placeholder="メールアドレス、ユーザーネーム" class="login-input-userinfo"></input>
+        <input type="password" name="login_password" placeholder="パスワード" class="login-input-password"></input>
+        <button type="submit" class="login-btn-login">ログイン</button>
+      </form>
+      <p class="login-create-account">アカウントを持っていない場合 <a href="/regist" class="login-txt-regist">登録はこちらから</a></p>
+    </div>
   </main>
 </body>
 
