--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="mypage-list-wrapper">
-      <p>ユーザー情報変更</p>
+      <p><a href="/change_info">ユーザー情報変更</a></p>
       <p><a href="/payment_info">支払い情報</a></p>
       <p id="list_logout">ログアウト</p>
       <p>退会</p>
