--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -10,7 +10,119 @@
 </head>
 <body>
   <%- include("./set/header"); %>
-  <main>
-    <p>hgoe</p>
+  <main class="vote-whole-wrapper">
+    <p class="vote-title">見たいと思う映画を<span>3つまで</span>選んでください</p>
+
+    <form method="post" action="/vote" class="vote-select-movie-wrapper">
+
+      <div class="vote-select-movie-container">
+        <div>
+          <img src="/movies/Aladdin.png">
+          <input type="checkbox" name="movie" value="1">
+        </div>
+  
+        <div>
+          <img src="/movies/TheLastSamurai.png">
+          <input type="checkbox" name="movie" value="2">
+        </div>
+  
+        <div>
+          <img src="/movies/KimiNoNaha.png">
+          <input type="checkbox" name="movie" value="3">
+        </div>
+
+        <div>
+          <img src="/movies/AnaYuki.png">
+          <input type="checkbox" name="movie" value="4">
+        </div>
+
+        <div>
+          <img src="/movies/Spiderman.png">
+          <input type="checkbox" name="movie" value="5">
+        </div>
+
+        <div>
+          <img src="/movies/Ponyo.png">
+          <input type="checkbox" name="movie" value="6">
+        </div>
+
+        <div>
+          <img src="/movies/Totoro.png">
+          <input type="checkbox" name="movie" value="7">
+        </div>
+
+        <div>
+          <img src="/movies/Nimo.png">
+          <input type="checkbox" name="movie" value="8">
+        </div>
+
+        <div>
+          <img src="/movies/TerminaterNewFate.png">
+          <input type="checkbox" name="movie" value="9">
+        </div>
+
+        <div>
+          <img src="/movies/Jaws.png">
+          <input type="checkbox" name="movie" value="10">
+        </div>
+
+        <div>
+          <img src="/movies/BohemianRhapsody.png">
+          <input type="checkbox" name="movie" value="11">
+        </div>
+
+        <div>
+          <img src="/movies/Avatar.png">
+          <input type="checkbox" name="movie" value="12">
+        </div>
+
+        <div>
+          <img src="/movies/BijoToYaju.png">
+          <input type="checkbox" name="movie" value="13">
+        </div>
+
+        <div>
+          <img src="/movies/SenToChihiro.png">
+          <input type="checkbox" name="movie" value="14">
+        </div>
+
+        <div>
+          <img src="/movies/GhostBasters.png">
+          <input type="checkbox" name="movie" value="15">
+        </div>
+
+        <div>
+          <img src="/movies/Terminater.png">
+          <input type="checkbox" name="movie" value="16">
+        </div>
+        
+        <div>
+          <img src="/movies/Armageddon.png">
+          <input type="checkbox" name="movie" value="17">
+        </div>
+
+        <div>
+          <img src="/movies/kazeTachinu.png">
+          <input type="checkbox" name="movie" value="18">
+        </div>
+
+        <div>
+          <img src="/movies/Titanic.png">
+          <input type="checkbox" name="movie" value="19">
+        </div>
+
+        <div>
+          <img src="/movies/HarryPotter.png">
+          <input type="checkbox" name="movie" value="19">
+        </div>
+
+      </div>
+      
+      <input type="submit" value="投票する">
+    </form>
+      
   </main>
+<script>
+document.getElementsByClassName("")
+</script>
 </body>
