--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -1,7 +1,7 @@
 @import url("/css/set/var.css");
 
 .mypage-whole-wrapper {
-  padding: 0 20px 47px;
+  padding: 0 20px 320px;
 }
 .mypage-info-board {
   align-items: center;
@@ -36,22 +36,15 @@
   margin-top: 10px;
 }
 .mypage-list-wrapper {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
   font-size: var(--base-font-size);
   margin-top: 65px;
+  text-align: center;
 }
 .mypage-list-wrapper p {
-  cursor: pointer;
-  display: inline-block;
   margin-top: 40px;
 }
 .mypage-list-wrapper p:first-child {
   margin-top: 0;
-}
-.mypage-list-wrapper p:last-child {
-  margin-bottom: 105px;
 }
 .mypage-logout-wrapper {
   background-color: var(--base-yellow);
@@ -60,9 +53,7 @@
   margin: 0 auto;
   padding: 50px 10px 10px;
   text-align: center;
-  top: 500px;
-  visibility: hidden;
-  width: 100%;
+  width: 80%;
 }
 .mypage-logout-title {
   color: var(--base-black);
@@ -75,5 +66,5 @@
   display: flex;
   height: 40px;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 48px;
 }
