--- a/public/css/top.css
+++ b/public/css/top.css
@@ -1,25 +1,24 @@
 @import url("/css/set/var.css");
 
-.top-contents {
-  overflow: hidden;
-  padding: 0 20px 40px;
+.home-contents {
+  padding: 0 20px;
 }
-.top-catch-copy {
+.home-catch-copy {
   font-size: 36px;
   font-weight: 700;
   line-height: 60px;
   margin-top: 68px;
 }
-.top-txt-eigakan {
+.home-txt-eigakan {
   color: var(--base-yellow);
   font-size: 48px;
 }
-.top-explain-revima {
+.home-explain-revima {
   letter-spacing: 5%;
   line-height: 36px;
   margin-top: 52px;
 }
-.top-vote-eiga {
+.home-vote-eiga {
   background-color: var(--base-yellow);
   border-radius: 5px;
   color: #252525;
@@ -30,19 +29,16 @@
   text-align: center;
   width: 100%;
 }
-.top-moviepic-container {
+.home-demo-box-container {
   display: flex;
-  justify-content: space-between;
-  margin-top: 50px;
-  margin-left: -10%;
-  width: 120%;
+  justify-content: center;
+  overflow: hidden;
+  padding: 50px 0 100px;
 }
-.top-moviepic-container img {
+.home-demo-box  {
+  flex: none;
+  background-color: var(--base-white);
+  height: 168px;
+  margin-right: 5px;
   width: 100px;
-}
-.top-footer {
-  font-family: 'Lato-Bold';
-  font-size: 12px;
-  text-align: center;
-  margin-top: 50px;
 }
